--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@ body {
     margin: 0; }
     @media only screen and (min-width: 860px) {
       body h2 {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         line-height: 2.1rem; } }
   body h3 {
     font-size: 1.5rem;
@@ -39,20 +39,22 @@ body {
     margin: 0;
     line-height: 1.2rem; }
   body a {
-    color: #328EDE;
+    color: #3acefc;
     text-decoration: none;
     padding-bottom: 2px;
     transition: 0.1s all ease-in; }
   body a:hover {
-    color: #3acefc; }
+    color: #328EDE; }
 
 .btn {
   transition: 0.1s all ease-in;
   padding-right: 2rem;
-  padding-left: 2rem; }
+  padding-left: 2rem;
+  border: 0; }
 
 .btn-primary {
-  background-color: #328EDE; }
+  background-color: #328EDE;
+  border: 0; }
 
 .btn-primary:hover {
   background-color: #3acefc;
@@ -77,6 +79,11 @@ body {
 .no-radius--left {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0; }
+
+.btn-primary.disabled,
+.btn-primary:disabled {
+  background: #a8a8a8;
+  border: 0; }
 
 .breakpoint {
   display: block;
@@ -585,11 +592,23 @@ nav ul {
 .dz-preview .dz-image {
   border-radius: 0;
   border: 1px solid #cdcdcd;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 80px;
+  height: 80px;
+  background: #fafafa;
+  transition: 0.1s ease-in all; }
 
 .dz-message {
   margin: 0;
   display: none; }
+
+.dz-preview,
+.dz-processing,
+.dz-image-preview,
+.dz-error,
+.dz-complete {
+  display: inline-block;
+  position: relative; }
 
 .dz-preview.dz-image-preview {
   display: inline-block;
@@ -597,7 +616,10 @@ nav ul {
   background-color: transparent; }
 
 .dropzone-previews {
-  padding: 0.25rem; }
+  padding: 0.25rem 0.75rem; }
+
+.dropzone__error-container {
+  color: red; }
 
 .dropzone--predict .dropzone-previews {
   justify-content: center; }
@@ -735,21 +757,43 @@ nav ul {
 #dropzonePredictTemplate {
   display: none; }
 
+.dropzone__header--hidden {
+  opacity: 0;
+  height: 0; }
+
 .classifier__nav-tabs {
   width: 100%;
   margin: 4rem auto 0 auto;
   justify-content: center; }
 
 .classifier__nav-item .nav-link {
-  padding: 0.75rem 0.5rem;
-  border-top: 1px solid transparent;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  border-bottom: 0;
-  margin: 0 0.5rem; }
+  margin: 1rem;
+  border: 0; }
+  @media only screen and (min-width: 650px) {
+    .classifier__nav-item .nav-link {
+      padding: 0.75rem 0.5rem;
+      border-top: 1px solid transparent;
+      border-left: 1px solid transparent;
+      border-right: 1px solid transparent;
+      border-bottom: 0;
+      margin: 0 0.5rem; } }
 
-.classifier__nav-item .nav-link.active {
-  background-color: #f7f7f7; }
+.classifier__nav-link.active {
+  background-color: #f7f7f7 !important; }
+
+.classifier__nav-link h2 span {
+  color: #bebebe; }
+
+.classifier__nav-item--or {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-style: italic; }
+  @media only screen and (min-width: 650px) {
+    .classifier__nav-item--or {
+      display: none; } }
+  .classifier__nav-item--or h2 {
+    color: #aeaeae; }
 
 .classifier__nav-item h2 {
   padding: 0 1rem 0 0.65rem;
@@ -873,7 +917,7 @@ li.stepper__step {
   color: #328EDE; }
 
 .stepper li:hover .step__circle i {
-  background: #3acefc;
+  background: #ff718b;
   transform: scale(1.75); }
 
 .stepper li:hover .step__description {
@@ -917,30 +961,26 @@ li.stepper__step {
 .dropzone__label {
   margin: 0.35rem 0 0rem 0; }
 
-.dropzone__preview-container {
-  background-color: red;
-  margin-bottom: 0.5rem; }
+.category__dropzone {
+  align-items: center;
+  justify-content: center; }
 
 .category__container {
   position: relative;
   border-radius: 1rem;
   margin-bottom: 1rem; }
 
-.category__dropzone {
-  align-items: center;
-  justify-content: center; }
-
 .category__box {
   border-radius: 1rem;
   color: #ff0030;
   border: 2px dashed #c5c5c5;
   border-radius: 10px;
-  background-color: white; }
+  background-color: white;
+  cursor: pointer;
+  transition: 0.1s ease-out all; }
 
 .category__box:hover {
-  border: 2px dashed #f76161;
-  background-color: #f5faff;
-  transition: 0.2s ease-out all; }
+  border: 2px dashed #ff718b; }
 
 .category__button--remove {
   position: absolute;
@@ -994,5 +1034,7 @@ li.stepper__step {
   color: #6d6d6d; }
 
 .button--train {
-  margin-right: 0.75rem;
-  width: 100px; }
+  margin-right: 0.75rem; }
+
+.button--play {
+  margin-right: 0.75rem; }
